--- a/docker-custom/Dockerfile.custom
+++ b/docker-custom/Dockerfile.custom
@@ -75,8 +75,11 @@ ENV NODE_RED_VERSION=$NODE_RED_VERSION \
     NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules \
     FLOWS=flows.json
 
-# ENV NODE_RED_ENABLE_SAFE_MODE=true    #Uncomment to enable safe start mode (flows not running)
-ENV NODE_RED_ENABLE_PROJECTS=true       #Uncomment to enable projects option
+# Uncomment to enable safe start mode (flows not running)
+# ENV NODE_RED_ENABLE_SAFE_MODE=true
+
+# Enable flow management
+ENV NODE_RED_ENABLE_PROJECTS=true
 
 # User configuration directory volume
 VOLUME ["/data"]
