--- a/docker-custom/Dockerfile.custom
+++ b/docker-custom/Dockerfile.custom
@@ -78,7 +78,7 @@ ENV NODE_RED_VERSION=$NODE_RED_VERSION \
 # Uncomment to enable safe start mode (flows not running)
 # ENV NODE_RED_ENABLE_SAFE_MODE=true
 
-# Enable flow management
+# Enable flow management via projects
 ENV NODE_RED_ENABLE_PROJECTS=true
 
 # User configuration directory volume
